<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/overall_background">
  
     <ImageView
        android:id="@+id/back_white_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_white_head" />

    <ImageView
        android:id="@+id/back_white_neck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_white_neck" />

    <ImageView
        android:id="@+id/back_white_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_white_back" />

    <ImageView
        android:id="@+id/back_white_bum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_white_bum" />

    <ImageView
        android:id="@+id/back_white_leftarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_white_leftarm" />

    <ImageView
        android:id="@+id/back_white_rightarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_white_rightarm" />

    <ImageView
        android:id="@+id/back_white_rightleg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_white_rightleg" />

    <ImageView
        android:id="@+id/back_white_leftleg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_white_leftleg" />
    
    <ImageView
        android:id="@+id/back_red_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_red_head"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/back_red_neck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_red_neck" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_red_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_red_back" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_red_bum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_red_bum" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_red_leftarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_red_leftarm" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_red_rightarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_red_rightarm"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/back_red_rightleg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_red_rightleg" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_red_leftleg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_red_leftleg" 
        android:visibility="invisible"/>
    
    <ImageView
        android:id="@+id/back_amber_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_amber_head" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_amber_neck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_amber_neck" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_amber_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_amber_back" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_amber_bum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_amber_bum" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_amber_leftarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_amber_leftarm" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_amber_rightarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_amber_rightarm" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_amber_rightleg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_amber_rightleg" 
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/back_amber_leftleg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/back_amber_leftleg"
        android:visibility="invisible" />

    <Button
        android:id="@+id/back_head"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/back_white_head"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true" 
        android:background = "@android:color/transparent" />
        
	<Button
        android:id="@+id/back_neck"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_below="@+id/back_head"
        android:layout_centerHorizontal="true"
        android:background = "@android:color/transparent"/>
    
    <Button
        android:id="@+id/back_back"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_below="@+id/back_neck"
        android:layout_centerHorizontal="true" 
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp" 
        android:background = "@android:color/transparent"/>
    
     <Button
        android:id="@+id/back_bum"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_below="@+id/back_back"
        android:layout_marginTop="-5dp"
        android:layout_centerHorizontal="true" 
        android:background = "@android:color/transparent"/>
     
      <Button
        android:id="@+id/back_rightarm"
        android:layout_width="40dp"
        android:layout_height="150dp"
        android:layout_toRightOf="@+id/back_back"
        android:layout_toEndOf="@+id/back_back"
        android:layout_alignTop="@+id/back_back"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp" 
        android:background = "@android:color/transparent"/>
      
      <Button
        android:id="@+id/back_leftarm"
        android:layout_width="40dp"
        android:layout_height="150dp"
        android:layout_toLeftOf="@+id/back_back"
        android:layout_toStartOf="@+id/back_back"
        android:layout_alignTop="@+id/back_back"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" 
        android:background = "@android:color/transparent"/>
      
      <Button
        android:id="@+id/back_leftleg"
        android:layout_width="30dp"
        android:layout_height="170dp"
        android:layout_alignLeft="@+id/back_back"
        android:layout_alignStart="@+id/back_back"
        android:layout_below="@+id/back_bum"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-10dp"
        android:layout_marginStart="5dp" 
        android:background = "@android:color/transparent" />
      
      <Button
        android:id="@+id/back_rightleg"
        android:layout_width="30dp"
        android:layout_height="170dp"
        android:layout_alignRight="@+id/back_back"
        android:layout_alignEnd="@+id/back_back"
        android:layout_below="@+id/back_bum"
        android:layout_marginRight="5dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="5dp"
        android:background = "@android:color/transparent"/>

      <TextView
          android:id="@+id/TV_back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/back_white_head"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="20dp"
          android:text="@string/TV_back" />
      
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_leftleg"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:src="@drawable/white_marker" />

            <TextView
                android:id="@+id/TV_whiteMarker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/TV_whiteMarker" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:src="@drawable/amber_marker" />

            <TextView
                android:id="@+id/TV_amberMarker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/TV_amberMarker" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:src="@drawable/red_marker" />

            <TextView
                android:id="@+id/TV_redMarker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/TV_redMarker" />
        </LinearLayout>
    </LinearLayout>
    

</RelativeLayout>
